update the way of coloring scheme
git-svn-id: https://svn.win.tue.nl/repos/prom/Packages/CacheAlignment/Trunk@47378 a68f48d4-8d00-424f-b812-3f22a534a02a

--- a/ivy.xml
+++ b/ivy.xml
@@ -1,5 +1,5 @@
 <ivy-module version="2.0">
-    <info organisation="prom" module="OCCM" revision="latest">
+    <info organisation="prom" module="CacheAlignment" revision="latest">
     	<description>
     		Version VERSION
     	</description>
