Fixed issue with ivy settings file. Now using an ivy dependency to json instead of jar file in lib folder. Removed jar files from lib folder as they seem to be not used.
git-svn-id: https://svn.win.tue.nl/repos/prom/Packages/CacheAlignment/Trunk@47380 a68f48d4-8d00-424f-b812-3f22a534a02a

--- a/ivy.xml
+++ b/ivy.xml
@@ -21,5 +21,7 @@
     	<dependency conf="lib->default" org="org.eclipse.collections" name="eclipse-collections" rev="9.2.0" />
     	<dependency conf="lib->default" org="org.apache.commons" name="commons-jexl3" rev="3.0" />
     	<dependency conf="lib->default" org="org.codehaus.groovy" name="groovy-all" rev="2.5.3" />
+    	<!-- Next item is added to replace lib/json-20211205.jar -->
+    	<dependency conf="lib->default" org="org.json" name="json" rev="20230227"/>    	
     </dependencies>
 </ivy-module>
